Aligned logout button to top right using flexbox

--- a/template/index.html
+++ b/template/index.html
@@ -67,8 +67,9 @@
     
         <!-- Main Section -->
     <div class="container" id="mainSection" style="display:none;">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
         <div id="userWelcome"></div>
-        <button onclick="logoutUser()" style="float:right;">Logout</button>
+        <button onclick="logoutUser()">Logout</button>
         <div id="mainNotification" class="notification"></div>
         <div class="flex">
             <!-- Panels for future features go here -->
